--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,6 +17,12 @@ pipeline {
             }
         }
     }
+
+    post {
+        always {
+            juint 'test-results/junit.xml'
+        }
+    }
 }
 
 
