--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 
     post {
         always {
-            juint 'test-results/junit.xml'
+            junit 'test-results/junit.xml'
         }
     }
 }
